--- a/project/peachc/common/style/style.css
+++ b/project/peachc/common/style/style.css
@@ -1,15 +1,19 @@
 @charset "utf-8";
+
 body {
   font-family: "Prompt", 돋움, sans-serif;
   color: #000;
   /* position: relative; */
 }
+
+/* header */
 header {
   width: 100%;
-  height: 14.5vh;
+  height: 22.1vh;
   top: 0;
   z-index: 9999;
   background-color: #fff;
+  position: fixed;
 }
 img.svg {
   width: 30px;
@@ -17,13 +21,14 @@ img.svg {
 .headerBox1 {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
   padding: 2% 3% 0 3%;
 }
 .Menu {
   display: flex;
   font-size: 24px;
-  margin-right: auto;
+  /* margin-right: auto; */
 }
 .Menu li {
   font-weight: 600;
@@ -35,18 +40,53 @@ img.svg {
 header h1 {
   width: 100%;
   text-align: center;
+  padding: 2% 0 0 0;
 }
 img.header_Logo {
-  width: 350px;
+  width: 400px;
 }
 .iconBox {
   display: flex;
+  justify-content: flex-end;
   align-items: center;
+  width: 240px;
+}
+.iconBox li {
+  margin-right: 18%;
+  height: 40px;
+  line-height: 40px;
+}
+.iconBox li:last-child {
+  margin-right: 0;
+}
+.headerLogo_2 {
+  display: none;
+}
+.headerLogo_2.active {
+  display: block;
+}
+.headerLogo2.active {
+  width: 200px;
+  height: 31.56px;
+  line-height: 31.56px;
+  padding: 0;
+  display: block;
 }
 
+/* main */
+main {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+.main-1 {
+  width: 100%;
+  background: fixed url(/project/peachc/common/images/main-bg-01.png) no-repeat
+    50% / cover;
+}
 .mainTitle {
   position: absolute;
-  bottom: 18%;
+  bottom: 13%;
   right: 8%;
   font-family: "SpoqaHanSansNeo", 돋움, sans-serif;
   color: #fff;
@@ -59,4 +99,495 @@ img.header_Logo {
   font-size: 2rem;
   font-weight: 400;
   text-align: right;
+}
+
+/* section */
+/* banner_mdPICK */
+.banner_mdPICK {
+  width: 100%;
+  height: 150vh;
+  background: linear-gradient(#d1caff, #e6e2ff, #efedff);
+  border-top: 9px solid #ebff00;
+  position: relative;
+}
+.imageBox {
+  width: 60vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -55%, 0);
+}
+.mauvewave {
+  position: absolute;
+  top: 13%;
+}
+.mainTitle {
+}
+.mdPICKTitle {
+  font-size: 14rem;
+  font-weight: 700;
+}
+.mdPICKTitle_rt {
+  position: absolute;
+  right: 0;
+  top: 8%;
+}
+.mdPICKTitle_lf {
+  position: absolute;
+  left: 0;
+  bottom: 10%;
+}
+.productTitle {
+  font-family: "SpoqaHanSansNeo", 돋움, sans-serif;
+  position: absolute;
+  bottom: 10%;
+  right: 29%;
+  line-height: 1.6;
+}
+.productTitle h3 {
+  font-weight: 700;
+  font-size: 1.7rem;
+  text-align: right;
+}
+.productTitle p {
+  font-weight: 300;
+  font-size: 1.3rem;
+  text-align: right;
+  margin-top: 5%;
+  color: #444;
+}
+.viewBtn {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 500px;
+}
+.banner_md_Btn {
+  position: absolute;
+  bottom: 5%;
+  left: 7%;
+}
+.viewBtn p {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+.viewBtn .arrowbtn {
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  border: 1px solid #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 4%;
+}
+img.arrow {
+  width: 30px;
+}
+.productImg_Box {
+  width: 100%;
+}
+.productImg {
+}
+.item_replaypink {
+  position: absolute;
+  top: 2%;
+}
+.item_mauvewave {
+  position: absolute;
+  right: 18%;
+  bottom: 13%;
+  transform: rotate(-25deg);
+}
+.item_mauvewave img {
+  width: 180px;
+}
+.item_sunsetgrass {
+  position: absolute;
+  right: 10%;
+  top: 40%;
+  transform: rotate(8deg);
+}
+.item_sunsetgrass img {
+  width: 160px;
+}
+.item_replaypink {
+  position: absolute;
+  left: 5%;
+  top: 20%;
+  transform: rotate(-16deg);
+}
+.item_replaypink img {
+  width: 200px;
+}
+
+/* slideAni" */
+.flow-container {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  /* padding: 100px 0; */
+  overflow-x: hidden;
+  overflow-y: hidden;
+  height: 10vh;
+  cursor: pointer;
+}
+.flow-container .PortfolioBox {
+  position: absolute;
+  white-space: nowrap;
+  will-change: transform;
+  animation: marquee 60s linear infinite;
+  display: flex;
+  cursor: pointer;
+}
+.flow-container .PortfolioText {
+  line-height: 10vh;
+  font-size: 35px;
+  font-weight: 200;
+  /* position: absolute; */
+  white-space: nowrap;
+  will-change: transform;
+  animation: marquee 60s linear infinite;
+  color: #111;
+}
+@keyframes marquee {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
+  }
+}
+
+/* product */
+.product {
+  width: 100%;
+  margin-top: 7%;
+}
+.title h3 {
+  font-family: "Frank", 돋움, sans-serif;
+  font-size: 4rem;
+  font-weight: 400;
+  font-style: italic;
+  text-align: center;
+  color: #111;
+  line-height: 1.3;
+}
+.title span {
+  font-family: "Frank", 돋움, sans-serif;
+  font-size: 5rem;
+  font-weight: 700;
+  text-align: center;
+}
+.products_Box {
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  margin-top: 8%;
+}
+.product_inner {
+  width: 100%;
+  display: flex;
+  position: relative;
+}
+/* PALETTE */
+.product_1 {
+  justify-content: flex-start;
+  align-items: center;
+}
+.modal {
+  width: 700px;
+}
+.itemImg {
+  /* margin-left: auto; */
+}
+.product_PALETTE {
+  position: absolute;
+  left: 38%;
+}
+img.product_PALETTE {
+  width: 400px;
+}
+.innerTitle {
+  /* margin-left: auto; */
+  z-index: 999;
+}
+.product_1_innerTitle {
+  position: absolute;
+  right: 0;
+}
+.innerTitle h3 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  line-height: 1.3;
+}
+.innerTitle p {
+  margin-top: 3%;
+  font-family: "SpoqaHanSansNeo", 돋움, sans-serif;
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: #222;
+}
+.Circle {
+  width: 100%;
+  display: flex;
+  margin-top: 10%;
+}
+.PALETTE_Circle {
+  justify-content: flex-end;
+}
+.Circle .PALETTE {
+  display: block;
+  width: 65px;
+  height: 65px;
+  border-radius: 65%;
+  margin-right: 3%;
+}
+.Circle .PALETTE:last-child {
+  margin: 0;
+}
+.Circle .PALETTE_1 {
+  background-color: #ffd6bf;
+}
+.Circle .PALETTE_2 {
+  background-color: #ffd7fb;
+}
+.Circle .PALETTE_3 {
+  background-color: #fdc0e4;
+}
+
+.product_PALETTE_Btn {
+  /* margin-top: 10%; */
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+/* liner */
+.product_2 {
+  margin-top: 13%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.product_liner {
+  position: absolute;
+  right: 44%;
+}
+img.product_2_modal {
+  margin-left: auto;
+}
+img.product_liner {
+  width: 265px;
+}
+.innerTitle {
+  /* margin-left: auto; */
+  z-index: 999;
+}
+.product_2_innerTitle {
+  position: absolute;
+  left: 0;
+}
+.liner_Circle {
+  justify-content: flex-start;
+}
+.Circle .liner {
+  display: block;
+  width: 65px;
+  height: 65px;
+  border-radius: 65%;
+  margin-right: 3%;
+}
+.Circle .liner_1 {
+  background-color: #000;
+}
+.Circle .liner_2 {
+  background-color: #61351a;
+}
+.Circle .liner_3 {
+  background-color: #825c38;
+}
+.product_liner_Btn {
+  /* margin-top: 10%; */
+  display: flex;
+  justify-content: flex-start;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+/*  */
+
+/* UNDEREYE */
+.product_3 {
+  margin-top: 13%;
+  justify-content: flex-start;
+  align-items: center;
+}
+.product_UNDEREYE {
+  position: absolute;
+  left: 44%;
+}
+img.product_UNDEREYE {
+  width: 175px;
+}
+.innerTitle {
+  /* margin-left: auto; */
+  z-index: 999;
+}
+.product_3_innerTitle {
+  position: absolute;
+  right: 0;
+}
+.UNDER_Circle {
+  justify-content: flex-end;
+}
+.Circle .UNDERUNDER {
+  display: block;
+  width: 65px;
+  height: 65px;
+  border-radius: 65%;
+  margin-right: 3%;
+}
+.Circle .UNDERUNDER:last-child {
+  margin: 0;
+}
+.Circle .EYE_1 {
+  background-color: #ffd6bf;
+}
+.Circle .EYE_2 {
+  background-color: #ffd7fb;
+}
+.Circle .EYE_3 {
+  background-color: #fdc0e4;
+}
+
+.product_UNDEREYE_Btn {
+  /* margin-top: 10%; */
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+/* BRUSH */
+.product_4 {
+  margin-top: 13%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.product_BRUSH {
+  position: absolute;
+  right: 44%;
+}
+img.product_4_modal {
+  margin-left: auto;
+}
+img.product_BRUSH {
+  width: 320px;
+}
+.innerTitle {
+  /* margin-left: auto; */
+  z-index: 999;
+}
+.product_4_innerTitle {
+  position: absolute;
+  left: 0;
+}
+.BRUSH_Circle {
+  justify-content: flex-start;
+}
+.Circle .BRUSH {
+  display: block;
+  width: 65px;
+  height: 65px;
+  border-radius: 65%;
+  margin-right: 3%;
+}
+.Circle .BRUSH_1 {
+  background-color: #000;
+}
+.Circle .BRUSH_2 {
+  background-color: #61351a;
+}
+.Circle .BRUSH_3 {
+  background-color: #825c38;
+}
+.product_BRUSH_Btn {
+  /* margin-top: 10%; */
+  display: flex;
+  justify-content: flex-start;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+/* about */
+.about_banner {
+  margin-top: 7%;
+  width: 100%;
+  background-color: #fbfaf5;
+  position: relative;
+  padding: 0 0 15% 0;
+}
+.aboutTitle {
+  font-family: "Frank", 돋움, sans-serif;
+  font-size: 17rem;
+  text-align: center;
+  color: #222;
+  cursor: pointer;
+}
+h2.big {
+  font-size: 22rem;
+  font-weight: 300;
+  font-style: italic;
+}
+.top {
+  margin-top: 10%;
+}
+.bottom {
+  display: flex;
+  justify-content: flex-end;
+}
+h2.mg {
+  margin-right: auto;
+}
+.font {
+  font-weight: 500;
+}
+.mention {
+  font-family: "SpoqaHanSansNeo", 돋움, sans-serif;
+  font-size: 1.4rem;
+  font-weight: 300;
+  color: #222;
+  line-height: 1.8;
+  position: absolute;
+  bottom: 7%;
+  right: 15%;
+}
+.mention span {
+  font-weight: 600;
+  color: #444;
+}
+.about_Btn {
+  /* margin-top: 10%; */
+  display: flex;
+  justify-content: flex-start;
+  position: absolute;
+  bottom: 7%;
+  left: 18%;
+}
+.slide_modal {
+  position: absolute;
+  bottom: 18%;
+  left: 33%;
+}
+img.slide_modal {
+  width: 450px;
 }
